<resources>
    <string name="app_name">FirebaseCursoSF</string>
    <string name="login">Login *</string>
    <string name="hint_email">Insira seu email</string>
    <string name="password">Senha *</string>
    <string name="hint_password">Insira sua senha</string>
    <string name="ok">Ok</string>
    <string name="sign_out">Deslogar</string>
    <string name="download_image">Download Imagem</string>
    <string name="upload_imagem">Upload Imagem</string>
    <string name="read_data">Firestore - Ler dados</string>
    <string name="save_change_remove">Firestore - Gravar, alterar ou remover dados</string>
    <string name="categories">Categorias</string>
    <string name="download">Download</string>
    <string name="remove">Remover</string>
    <string name="upload">Upload</string>
    <string name="get_image">Obter Imagem</string>
    <string name="galery">Galeria</string>
    <string name="camera">Câmera</string>
</resources>