<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_download_image"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="1dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/download_image"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_upload_image"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="1dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/upload_imagem"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_read_data"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="1dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/read_data"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_save_change_remove"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="1dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/save_change_remove"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_categories"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="1dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/categories"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_sign_out"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="1dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/sign_out"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>